# clangquill

./: .coderabbit.yaml  .gitattributes  .gitignore  .markdown_link_check_config.json  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .readthedocs.yml  AUTHORS.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  vcpkg.json
.github/: dependabot.yml
.github/workflows/: benchmark.yml  bot.yml  cpp_tests.yml  deploy.yml  docs.yml  git_checks.yml  libclang-pin-check.yml  pre-commit.yml  ruff.yml  test.yml  test_deploy.yml  wheels.yml
benchmarks/: README.md  benchmark.py  pyproject.toml
benchmarks/configs/: abseil.toml  clangquill.toml  dune-gdt.toml  eigen.toml
cmake/: FindLibClang.cmake
docs/: Makefile  benchmarks.md  conf.py  cpp_api_index.md  index.md  installation.md  make.bat  substitutions.py  usage.md
docs/development/: adr-0001-libclang-sourcing.md  benchmark-methodology.md  index.md  performance-analysis.md
docs/examples/: basic.md  cpp23_features.hpp
docs/guides/: comment-parsers.md  configuration.md  index.md  templates.md
src/clangquill/: __init__.py  _libclang.py  _version.py  cache.py  cli.py  comments.py  config.py  generator.py  pipeline.py  sphinx_ext.py  store.py
src/clangquill/templates/: class.md.jinja  concept.md.jinja  degraded.md.jinja  enum.md.jinja  file.md.jinja  function.md.jinja  group.md.jinja  index.md.jinja  macro.md.jinja  member-page.md.jinja  namespace-hub.md.jinja  namespace-page.md.jinja  namespace.md.jinja  typedef.md.jinja
src/clangquill/templates/partials/: comment-block.md.jinja  param-table.md.jinja  signature.md.jinja
src/cpp/bindings/: module.cpp
src/cpp/core/: version.hpp
src/cpp/hash/: content_hash.cpp  content_hash.hpp  sha256.cpp  sha256.hpp
src/cpp/model/: comment.hpp  comment_model.hpp  enumerator.hpp  file.hpp  group.hpp  module.hpp  parameters.hpp  reference.hpp  symbol.hpp
src/cpp/parser/: ast_visitor.cpp  ast_visitor.hpp  comment_parser.cpp  comment_parser.hpp  compile_db.cpp  compile_db.hpp  cursor_utils.cpp  cursor_utils.hpp  doxygen_comment_parser.cpp  doxygen_comment_parser.hpp  parser.cpp  parser.hpp  references.cpp  references.hpp
src/cpp/store/: schema.hpp  sqlite_raii.hpp  sqlite_store.cpp  sqlite_store.hpp
tests/: __init__.py  conftest.py  fixtures.py  test_cache.py  test_clangquill.py  test_comment_store.py  test_comments.py  test_config.py  test_core.py  test_cpp_standards.py  test_generator.py  test_parse_sqlite.py  test_pipeline.py  test_sphinx_ext.py
tests/cpp/: test_comment_parser.cpp  test_hash.cpp  test_m7.cpp  test_parser.cpp  test_store.cpp
tests/cpp/fixtures/: doxygen.hpp  enums.hpp  m7.hpp  shapes.hpp  undocumented.hpp
tests/e2e/: test_e2e_build.py
tests/golden/: geo.md  index.md
tools/ci/: check_libclang_pin.py  fetch-libclang.sh  smoke_test.py  vcpkg-asset-fetch.sh
