[tool.ruff]
target-version = "py313"
line-length = 120
extend-exclude = ["_version.py", "docs/conf.py", "docs/substitutions.py"]

[tool.ruff.lint]
select = ["ALL"]
extend-ignore = ["E501", "ANN201", "ANN001", "D211", "D213"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101", "D103", "D100", "D104"]

[tool.pytest.ini_options]
addopts = "--cov=clangquill --cov-report=term-missing"


[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.0", "setuptools_scm>=8"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
# scikit-build-core ships its own cmake/ninja wheels when the system ones are
# missing or too old, so no extra system setup is required to build.
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
wheel.packages = ["src/clangquill"]
sdist.exclude = [".github", "docs/_build"]

[tool.scikit-build.cmake.define]
# libclang linkage is optional in M1 so the manylinux wheel build is decoupled
# from the libclang-sourcing spike (#4). CMake auto-detects it when present.
CLANGQUILL_WITH_LIBCLANG = "AUTO"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm]
fallback_version = "0.0.0"

[project]
name = "clangquill"
authors = [
  { name = "clangquill", email = "rene@fritze.me" }
]
description = "Parse Doxygen-documented C++ with libclang and generate MyST Markdown API docs for Sphinx"
readme = "README.md"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.13"
dependencies = [ "rich", "packaging" , "typer", "click"]

[project.optional-dependencies]
docs = ["sphinx>=6",
    "sphinx-autoapi>=3",
    "myst-nb>=0.18",
    "furo>=2023.9.10"]
ci = [
    "pytest",
    "pytest-cov",
]
dev = [
    "ty",
    "ruff",
    "pytest",
    "pytest-cov",
    "pytest-pycharm",
    "pytest-regressions",
    "pytest-datadir",
    "clangquill[docs]",
]


[project.urls]
Documentation = "https://github.com/renefritze/clangquill"
Source = "https://github.com/renefritze/clangquill"
