[tool.ruff]
target-version = "py313"
line-length = 120
extend-exclude = ["_version.py", "docs/conf.py", "docs/substitutions.py"]

[tool.ruff.lint]
select = ["ALL"]
# D203/D213 conflict with the ruff formatter; ignore them so `format` and
# `check` agree on class/multi-line docstring layout.
extend-ignore = ["E501", "ANN201", "ANN001", "D203", "D211", "D213"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101", "D103", "D100", "D104", "PLR2004"]
# Standalone CI helper run via `python tools/ci/smoke_test.py` (not a package);
# asserts + prints are intentional smoke-test output.
"tools/ci/*.py" = ["INP001", "D100", "D103", "S101", "T201", "PTH118", "PTH123"]
# Standalone benchmark driver run via `python benchmarks/benchmark.py` (not a
# package): prints are its UI, it shells out to git/clangquill/doxygen, and the
# orchestration functions are intentionally branchy. RUF001 allows the `×`/`·`
# glyphs in the rendered report. EXE001 is suppressed because the GitHub
# Contents API cannot preserve the 100755 executable bit when pushing files.
"benchmarks/*.py" = [
    "INP001", "D100", "D101", "D102", "D103", "T201", "S101", "S603", "S607",
    "C901", "PLR0912", "PLR0913", "PLR0915", "FBT001", "FBT002", "RUF001", "BLE001",
    "EXE001",
]

[tool.pytest.ini_options]
addopts = "--cov=clangquill --cov-report=term-missing"


[build-system]
requires = ["scikit-build-core>=0.12.2", "nanobind>=2.12.0", "setuptools_scm>=10.0.5"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
# scikit-build-core ships its own cmake/ninja wheels when the system ones are
# missing or too old, so no extra system setup is required to build.
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
wheel.packages = ["src/clangquill"]
sdist.exclude = [".github", "docs/_build"]

[tool.scikit-build.cmake.define]
# libclang linkage is optional in M1 so the manylinux wheel build is decoupled
# from the libclang-sourcing spike (#4). CMake auto-detects it when present.
CLANGQUILL_WITH_LIBCLANG = "AUTO"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm]
fallback_version = "0.0.0"
local_scheme = "no-local-version"

[project]
name = "clangquill"
authors = [
  { name = "clangquill", email = "rene@fritze.me" }
]
description = "Parse Doxygen-documented C++ with libclang and generate MyST Markdown API docs for Sphinx"
readme = "README.md"
# clangquill's own code is BSD-2-Clause; the manylinux wheels additionally
# bundle libclang (Apache-2.0 WITH LLVM-exception). Its license text is not
# tracked in git — the wheel build generates LICENSE-LLVM.txt from the fetched
# LLVM release (see tools/ci/fetch-libclang.sh and docs ADR-0001). The glob
# below ships it when present (wheels) and is a no-op otherwise (sdist/source).
license = "BSD-2-Clause"
license-files = ["LICENSE*"]
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.13"
dependencies = [ "rich", "packaging" , "typer", "click", "jinja2>=3.1"]

[project.scripts]
clangquill = "clangquill.cli:main"

[project.optional-dependencies]
docs = ["sphinx>=6",
    "sphinx-autoapi>=3",
    "myst-nb>=0.18",
    "furo>=2023.9.10"]
ci = [
    "pytest",
    "pytest-cov",
]
dev = [
    "ty",
    "ruff",
    "pytest",
    "pytest-cov",
    "pytest-pycharm",
    "pytest-regressions",
    "pytest-datadir",
    "clangquill[docs]",
]


[project.urls]
Documentation = "https://renefritze.github.io/clangquill/"
Source = "https://github.com/renefritze/clangquill"
